# mlir-test

./: .gitignore  CMakeLists.txt  README.md  build.sh  flake.nix
include/Dialect/: CMakeLists.txt
include/Dialect/Quake/: CMakeLists.txt  QuakeDialect.h  QuakeDialect.td
lib/Dialect/Quake/: CMakeLists.txt  QuakeDialect.cpp
tools/: CMakeLists.txt
tools/quake-opt/: CMakeLists.txt  quake-opt.cpp
